// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Constellations|CopyBlock With a CTA 1`] = `
.c1 {
  color: #303133;
  font-family: 'Raleway',sans-serif;
  font-weight: 700;
  font-size: 36px;
  line-height: normal;
  margin: 0 0 32px;
}

.c2 {
  color: #303133;
  font-family: 'Lato',sans-serif;
  font-weight: normal;
  font-size: 24px;
  line-height: normal;
  text-align: left;
  margin: 0 0 32px;
}

.c3 {
  color: #FFFFFF;
  font-family: 'Raleway',sans-serif;
  font-weight: 800;
  font-size: 16px;
  line-height: 1;
  margin: 0 0 32px;
  background-color: #1C104E;
  display: inline-block;
  padding: 16px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  <h2
    className="c1"
  >
    &quot;About Us
  </h2>
  <div
    className="c2"
  >
    <p>
      We are a LGBT friendly league. It’s a very competitive league so bring your A-game.
    </p>
  </div>
  <a
    className="c3"
    href="/about"
    type="primary"
    url={null}
  >
    LEARN MORE
  </a>
</div>
`;

exports[`Storyshots Constellations|CopyBlock Without a CTA 1`] = `
.c1 {
  color: #303133;
  font-family: 'Raleway',sans-serif;
  font-weight: 700;
  font-size: 36px;
  line-height: normal;
  margin: 0 0 32px;
}

.c2 {
  color: #303133;
  font-family: 'Lato',sans-serif;
  font-weight: normal;
  font-size: 24px;
  line-height: normal;
  text-align: center;
  margin: 0 0 32px;
}

.c0 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  <h2
    className="c1"
  >
    Mission Statement
  </h2>
  <div
    className="c2"
  >
    <p>
      The Metro Detroit Flag Football League (MDFFL) is an LGBT and straight allied flag football league, changing preconceived societal beliefs about sexual orientation and self-identification.
    </p>
  </div>
</div>
`;
